--- a/BioBigData/生信大数据笔记.md
+++ b/BioBigData/生信大数据笔记.md
@@ -45,5 +45,36 @@ Principle of SMRT
 #### Single-read library
 
 1. DNA sample is digested into 200-500bp fragments.
-2. Primer
+2. Primer and adaptors are ligated to the ends of fragments, respectively.
+3. DNA fragments are linked to flow cell to generate DNA cluster (spots on flow cell of same sequences made by amplification).
+4. Sequencing.
+
+
+
+
+#### Paired-end library
+
+1. Genomic DNA
+2. Fragment DNA into 200-500bp.
+3. Add adapter and primers in both ends of the sequence of interest.
+4. Generate **clusters**.
+5. Sequencing step - using modified dNTPs (ddNTPs) and primers for know sequences you read the reads by light signals.
+
+
+
+#### Mate-pair library
+
+1. Sequence fragmentation is made in bigger fragments (2-5 kb).
+
+2. A addition of a Biotin in each 5' ends is done.
+
+3. The sequence with correct addition of Biotin will circularize and after a wash, the sequencing with non-circularized fragment will be thrown away.
+
+4. The circularized fragments will be cut with the biotin in the middle and size-selected (400-600 bp).
+
+5. Sequencing is done normally: adapter with primer sequence addition, the fragments will be spotted and clustered, and sequencing.
+
+   ​
+
+参考学习下<http://www.cnblogs.com/huangshujia/p/3233693.html>，这是非常不错的讲解。
 
