--- a/BioBigData/生信大数据笔记.md
+++ b/BioBigData/生信大数据笔记.md
@@ -1,4 +1,4 @@
-##基因组测序技术
+## 基因组测序技术
 
 Workflow of NGS 二代测序流程
 
@@ -77,4 +77,83 @@ Principle of SMRT
    ​
 
 参考学习下<http://www.cnblogs.com/huangshujia/p/3233693.html>，这是非常不错的讲解。
+
+**Summary:**
+
+1. 样本建库不同；
+2. Single Read (SR) 只检测待测片段的 一端序列信息，PE或MP检测待测片段的两端序列信息；
+3. 信息具有互补性。
+
+
+
+### Sequencing read file format
+
+#### Sequencing read file in Fasta format
+
+第一行为描述行，以`>`开头，然后接序列信息
+
+第二行是标准的单字母序列，有时加`*`号作为结束符
+
+两个序列之间以空行分隔
+
+- Reads are often stored in fasta files
+- Separate file for forward and reverse pairs
+- header line -- read name/pairing info
+- sequence line -- nucleotides
+
+#### Sequencing read file in Fastq format
+
+1. Line 1 begins with a '@' character and if followed by a sequence identifier and an optional description.
+
+2. Line 2 is the raw sequence letters.
+
+3. Line 3 begins with a '+' character and is optionally followed by the same identifier (and any description) again.
+
+4. Line 4 encodes the quality values for the sequence in Line 2, and must contain the same number of symbols as letters in the sequence.
+
+   ​	The character '!' represents the lowest quality while '~' is the highest.
+
+   ​
+
+
+
+Most read are stored in fastq, 4 lines per read.
+
+
+
+### Read quality control
+
+Raw reads are always in fastq format. Usually, Quality score (Q-score) of a raw reads is used to measure the confidence in the base calling's identity.
+$$
+Q_{score} = - 10 * log_{10}P (P为碱基识别出错的概率)
+$$
+The higher $Q_{score}$, the lower $P_{error}$.
+
+Tools could be used to check Q-score for raw reads, such as **fastqc**.
+
+<http://www.bioinformatics.babraham.ac.uk/projects/>
+
+- Delete the PCR primer
+  -  先使用BWA软件进行mapping统计，然后再使用samtools rmdup进行去重复）
+- Filter the raw reads with low Q-score.
+
+![workflow](images/workflow1.png)
+
+
+
+
+
+## 从头组装及常用工具
+
+两种组装方式
+
+- *de novo* assembly （从头拼接）
+- reference assembly （参考拼接）
+
+面对的问题：
+
+- 不同组装形式有不同的软件工具；
+- 不同软件工具适用于不同数据类型；
+- 不同软件工具的参数要根据需要作调整；
+- 得到大量contigs和scaffolds，留下大大小小的未知区（gaps）。
 
