添加生信入门学习资源

--- a/BioBigData/生信大数据笔记.md
+++ b/BioBigData/生信大数据笔记.md
@@ -157,3 +157,21 @@ Tools could be used to check Q-score for raw reads, such as **fastqc**.
 - 不同软件工具的参数要根据需要作调整；
 - 得到大量contigs和scaffolds，留下大大小小的未知区（gaps）。
 
+
+
+### Popular tools for *de novo* assembly
+
+| 测序平台            | *de novo* 拼接工具                           |
+| --------------- | ---------------------------------------- |
+| ABI SOLiD       | Velvet                                   |
+| Illumina Solexa | Velvet; SOAPdenovo; ABySS; CLC Genomics Workbench |
+| 454/Ion Torrent | Newbler                                  |
+
+- Velvet: 参数多，可控性强，可做scaffold
+- ABySS: 傻瓜式
+- SOAPdenove: 参数多，可做scaffold
+- CLC: 商业化软件，可视界面
+- NewBler: 商业化软件，可视界面，适合较长reads
+
+Velvet; SOAPdenovo为常用工具
+
