添加生物大数据资源

--- a/BioBigData/生信大数据笔记.md
+++ b/BioBigData/生信大数据笔记.md
@@ -175,3 +175,68 @@ Tools could be used to check Q-score for raw reads, such as **fastqc**.
 
 Velvet; SOAPdenovo为常用工具
 
+Velvet
+
+- 拼接准确度高，对数据的通量要求不高；可以同时处理多种格式数据。
+- 速度偏慢，耗内存。
+
+SOAPdenovo
+
+- 拼接速度快，占内存小，但是准确度没Velvet高。
+- 能处理多种格式数据。尤其适合处理Solexa测序的数据。能够寻找contig的末端之间的关联信息生成scaffold。
+
+
+
+[ 测序技术迄今为止已发展了三代，测序技术有4个指标：读长、成本、准确度、通量。](https://www.zhihu.com/question/42132384)
+
+### 组装流程及评估
+
+补gap
+
+1. 利用pair-end或mate-end
+2. 利用参考基因组
+
+参考课件文档。
+
+
+
+### 组装效果评价
+
+**N50**
+
+- N50, N75 and N90 are statistics of a set of contig or scaffold lengths.
+- N50定义为the shortest sequence length at 50% of the genome.
+- The number of bases from all contigs shorter than the N50 will be close to the number of bases from all contigs longer than the N50.
+
+
+
+For example:
+
+- 9 contigs with the lengths 2,3,4,5,6,7,8,9 and 10, their sum is 54.
+- 如果基因组大小也恰好为54.
+- 50% of this assembly would be 10+9+8=27.
+- Thus the N50=8 wich is that contig along with the smaller contigs that contains half of sequence of particular genome.
+
+
+
+N50越大越好（最重要的参数）。
+
+**其他参数**
+
+- 覆盖率：基因组被测序数据覆盖的次数
+- 单碱基错误率：与参考序列比较后发现的小尺度碱基不同所占的比例。
+- 错误组装的contigs
+- N75, N90.
+
+
+
+## 转录组测序与分析
+
+C值（基因组大小）悖论：基因组大小与基因数目N不对称
+
+- 进化程度低的生物C值反而更高
+- 亲缘相近的物种间C值差异很大
+- C值远远超过了遗传信息量的需求
+
+
+
