--- a/BioBigData/生信大数据笔记.md
+++ b/BioBigData/生信大数据笔记.md
@@ -238,3 +238,16 @@ C值（基因组大小）悖论：基因组大小与基因数目N不对称
 - 亲缘相近的物种间C值差异很大
 - C值远远超过了遗传信息量的需求
 
+
+
+
+
+
+## 基因组重测序
+
+基因组重测序是对基因组序列已知的个体进行基因组测序， 并在个体或群体水平上进行差异
+性分析的方法。
+
+优点： 数据量大， 可以获取大量的有用信息，构建超精细图谱， 可以进行不同的性状关联分
+析， 为基因定位提供大量高效依据， 可以对物种的起源， 进化以及变异情况进行详细了解。  
+
