--- a/BioBigData/生信大数据笔记.md
+++ b/BioBigData/生信大数据笔记.md
@@ -251,3 +251,58 @@ C值（基因组大小）悖论：基因组大小与基因数目N不对称
 优点： 数据量大， 可以获取大量的有用信息，构建超精细图谱， 可以进行不同的性状关联分
 析， 为基因定位提供大量高效依据， 可以对物种的起源， 进化以及变异情况进行详细了解。  
 
+
+
+## 核酸数据库
+
+### DNA序列数据库
+
+GeneBank, EMBL, DDBJ
+
+Other sequence repositories:
+
+- BIOSINO: www.biosino.org, China
+- dbEST - Database of Expressed Sequence Tags (NCBI)
+- dbSTS - Database of Sequence  Tagged Sites (NCBI)
+
+Genomic Databases:
+
+- GenomeWeb (HGMP)
+- NCGR
+- GOLD
+
+DNA 3D Databases:
+
+- NDB
+- BNASDB
+
+Others
+
+- AsDb - Aberrant Splicing db
+- ACUTS - Ancient conserved untranslated DNA sequences db
+- Codon Usage Db - The frequency of codon use ...
+
+
+
+EPD - Eukaryotic Promoter db
+
+PLACE - Plant cis-acting regulator ...
+
+HOVERGEN - Homologous Vertebrate Genes db
+
+IMGT - ImMunoGeneTics db
+
+ISIS - Intron Sequence and Information System
+
+RDP - Ribosomal db Project
+
+gRNAs db - Guide RNA db
+
+
+
+### Database Query Tools
+
+1. SRS (Sequence Retrieval System)
+
+   ​
+
