--- a/Documentation/转录组入门笔记.md
+++ b/Documentation/转录组入门笔记.md
@@ -731,16 +731,20 @@ cd /mnt/f/Data
 mkdir reference && cd reference
 mkdir -p genome/hg19 && cd genome/hg19
 nohup wget http://hgdownload.soe.ucsc.edu/goldenPath/hg19/bigZips/chromFa.tar.gz &
-tar -zvf chromFa.tar.gz
+tar -zxvf chromFa.tar.gz
 cat *.fa > hg19.fa
 rm chr*
 ```
+
+> 这样得到的`hg19.fa`与`hg19.2bit`经twoBitToFa程序转换而成的`hg19.fa`有什么区别？？
+>
+> ——shixiang
 
 下面的内容是Jimmy在[【直播】我的基因组（五）:测试数据及参考基因组的准备](http://www.bio-info-trainee.com/1985.html)关于参考基因组的介绍。
 
 > 这个对新手来说，是一个很大的坑，hg19、GRCH37、 ensembl 75这3种基因组版本应该是大家见得比较多的了，国际通用的人类参考基因组，其实他们储存的是同样的fasta序列，只是分别对应着三种国际生物信息学数据库资源收集存储单位，即NCBI，UCSC及ENSEMBL各自发布的基因组信息而已。有一些参考基因组比较小众，存储的序列也不一样，比如BGI做的炎黄基因组，还有DNA双螺旋结构提出者沃森（Watson）的基因组，还有2016年发表在nature上面的号称最完善的韩国人做的基因组。前期我们先不考虑这些小众基因组，主要就下载hg19和hg38，都是UCSC提供的，虽然hg38相比hg19来说，做了很多改进，优点也不少，但因为目前为止很多注释信息都是针对于hg19的坐标系统来的，我们就都下载了，正好自己探究一下。也顺便下载一个小鼠的最新版参考基因组吧，反正比对也就是睡个觉的功夫，顺便分析一下结果，看看比对率是不是很低。
 
-**吐槽**： Jimmy大神的博客排版真的是非常考验我们对知识的渴望，每当看到他的排版的时候，我必须得忍住不去点击浏览器右上角。为了求知，我忍了。
+**吐槽**： Jimmy大神的博客排版真的是非常考验我们对知识的渴望，每当看到他的排版的时候，我必须得忍住不去点击浏览器右上角。为了求知，我忍了。（哈哈，我也是~）
 
 #### 注释信息
 
