--- a/Documentation/转录组入门笔记.md
+++ b/Documentation/转录组入门笔记.md
@@ -1111,11 +1111,11 @@ read_distribution.py -i RNA-Seq/aligned/SRR3589956_sorted.bam -r reference/hg19_
 - 转录本水平(transcript-level)
 - 外显子使用水平(exon-usage-level)。
 
-在**基因水平**上，常用的软件为HTSeq-count，featureCounts，BEDTools, Qualimap, Rsubread, GenomicRanges等。以常用的HTSeq-count为例，这些工具要解决的问题就是根据read和基因位置的overlap判断这个read到底是谁家的孩子。值得**注意**的是不同工具对multimapping reads处理方式也是不同的，例如HTSeq-count就直接当它们不存在。而Qualimpa则是一人一份，平均分配。
+在**基因水平**上，常用的软件为HTSeq-count，featureCounts，BEDTools, Qualimap, Rsubread, GenomicRanges等。以常用的HTSeq-count为例，这些工具要解决的问题就是根据read和基因位置的overlap判断这个read到底是谁家的孩子。值得**注意**的是不同工具对multi-mapping reads处理方式也是不同的，例如HTSeq-count就直接当它们不存在。而Qualimpa则是一人一份，平均分配。
 
 [![_images/count_modes.png](https://camo.githubusercontent.com/3c288240c69aa17bea5b7652778cf7469b221e09/687474703a2f2f6f6578373530677a742e626b742e636c6f7564646e2e636f6d2f31372d372d31392f38313937373035392e6a7067)](https://camo.githubusercontent.com/3c288240c69aa17bea5b7652778cf7469b221e09/687474703a2f2f6f6578373530677a742e626b742e636c6f7564646e2e636f6d2f31372d372d31392f38313937373035392e6a7067)
 
-对每个基因计数之后得到的count matrix再后续的分析中，要注意标准化的问题。如果你要比较同一个样本(within-sample)不同基因之间的表达情况，你就需要考虑到**转录本长度**，因为转录本越长，那么检测的片段也会更多，直接比较等于让小孩和大人进行赛跑。如果你是比较不同样本（across sample）同一个基因的表达情况，虽然不必在意转录本长度，但是你要考虑到**测序深度**（sequence depth)，毕竟测序深度越高，检测到的概率越大。除了这两个因素外，你还需要考虑GC%所导致的偏差，以及测序仪器的系统偏差。目前对read count标准化的算法有RPKM（SE）, FPKM（PE），TPM, TMM等，不同算法之间的差异与换算方法已经有文章进行整理和吐槽了。**但是**，有一些下游分析的软件会要求是输入的count matrix是原始数据，未经标准化，比如说DESeq2，这个时候你需要**注意**你上一步所用软件会不会进行标准化。
+对每个基因计数之后得到的count matrix再后续的分析中，要**注意标准化**的问题。如果你要**比较同一个样本(within-sample)不同基因之间的表达情况**，你就需要考虑到**转录本长度**，因为转录本越长，那么检测的片段也会更多，直接比较等于让小孩和大人进行赛跑。如果你是**比较不同样本（across sample）同一个基因的表达情况**，虽然不必在意转录本长度，但是你要考虑到**测序深度**（sequence depth)，毕竟测序深度越高，检测到的概率越大。除了这两个因素外，你还需要考虑GC%所导致的偏差，以及测序仪器的系统偏差。目前对**read count标准化的算法**有RPKM（SE）, FPKM（PE），TPM, TMM等，不同算法之间的差异与换算方法已经有文章进行整理和吐槽了。**但是**，有一些下游分析的软件会要求是输入的count matrix是原始数据，未经标准化，比如说DESeq2，这个时候你需要**注意**你上一步所用软件会不会进行标准化。
 
 在**转录本水平**上，一般常用工具为Cufflinks和它的继任者StringTie， eXpress。这些软件要处理的难题就时转录本亚型（isoforms）之间通常是有重叠的，当二代测序读长低于转录本长度时，如何进行区分？这些工具大多采用的都是expectation maximization（EM）。好在我们有三代测序。
 
