删除多余链接，修改bug

--- a/Documentation/转录组入门笔记.md
+++ b/Documentation/转录组入门笔记.md
@@ -956,21 +956,21 @@ samtools view -b  test.sam > test.bam
 samtools view test.bam | head
 ```
 
-[![img](https://camo.githubusercontent.com/99894dc564f1b3c51ffcd820457fb34bc5df9fcc/687474703a2f2f6f6578373530677a742e626b742e636c6f7564646e2e636f6d2f31372d372d31392f31303638353136312e6a7067)](https://camo.githubusercontent.com/99894dc564f1b3c51ffcd820457fb34bc5df9fcc/687474703a2f2f6f6578373530677a742e626b742e636c6f7564646e2e636f6d2f31372d372d31392f31303638353136312e6a7067)
+![img](https://camo.githubusercontent.com/99894dc564f1b3c51ffcd820457fb34bc5df9fcc/687474703a2f2f6f6578373530677a742e626b742e636c6f7564646e2e636f6d2f31372d372d31392f31303638353136312e6a7067)
 
 默认排序是根据染色体位置
 
 ```shell
-samtools sort test.bam default
+samtools sort test.bam -o default.bam
 samtools view default.bam | head
 ```
 
-[![img](https://camo.githubusercontent.com/7e065c4624c006c097d910284528df4da7c08b88/687474703a2f2f6f6578373530677a742e626b742e636c6f7564646e2e636f6d2f31372d372d31392f33353231343030362e6a7067)](https://camo.githubusercontent.com/7e065c4624c006c097d910284528df4da7c08b88/687474703a2f2f6f6578373530677a742e626b742e636c6f7564646e2e636f6d2f31372d372d31392f33353231343030362e6a7067)
+![img](https://camo.githubusercontent.com/7e065c4624c006c097d910284528df4da7c08b88/687474703a2f2f6f6578373530677a742e626b742e636c6f7564646e2e636f6d2f31372d372d31392f33353231343030362e6a7067)
 
 Sort alignments by leftmost coordinates, or by read name when -n is used.
 
 ```shell
-samtools sort -n test.bam sort_left
+samtools sort -n test.bam -o sort_left
 samtools view sort_left.bam | head
 ```
 
@@ -986,7 +986,9 @@ samtools view sort_left.bam | head
 samtools view SRR3589957_sorted.bam chr1:1234-123456 | head
 ```
 
-[![img](https://camo.githubusercontent.com/afefba36de4c62ebaf7db5d976d0c65cc99f3af4/687474703a2f2f6f6578373530677a742e626b742e636c6f7564646e2e636f6d2f31372d372d31392f32373133343136352e6a7067)](https://camo.githubusercontent.com/afefba36de4c62ebaf7db5d976d0c65cc99f3af4/687474703a2f2f6f6578373530677a742e626b742e636c6f7564646e2e636f6d2f31372d372d31392f32373133343136352e6a7067)在比如搭配`flag`(0.1.19版本没有）和`flagstat`，使用`-f`或`-F`参数提取不同匹配情况的read。 flag是一种描述read比对情况的标记，一种12种，可以搭配使用。
+![img](https://camo.githubusercontent.com/afefba36de4c62ebaf7db5d976d0c65cc99f3af4/687474703a2f2f6f6578373530677a742e626b742e636c6f7564646e2e636f6d2f31372d372d31392f32373133343136352e6a7067)
+
+再比如搭配`flag`(0.1.19版本没有）和`flagstat`，使用`-f`或`-F`参数提取不同匹配情况的read。 flag是一种描述read比对情况的标记，一种12种，可以搭配使用。
 
 ```shell
 0x1    PAIRED    paired-end (or multiple-segment) sequencing technology
@@ -1009,7 +1011,7 @@ samtools view SRR3589957_sorted.bam chr1:1234-123456 | head
 samtools flagstat SRR3589957_sorted.bam
 ```
 
-[![img](https://camo.githubusercontent.com/6582ee54efdece40bc17521ee37f820058fc0651/687474703a2f2f6f6578373530677a742e626b742e636c6f7564646e2e636f6d2f31372d372d31392f32363236363933322e6a7067)](https://camo.githubusercontent.com/6582ee54efdece40bc17521ee37f820058fc0651/687474703a2f2f6f6578373530677a742e626b742e636c6f7564646e2e636f6d2f31372d372d31392f32363236363933322e6a7067)
+![img](https://camo.githubusercontent.com/6582ee54efdece40bc17521ee37f820058fc0651/687474703a2f2f6f6578373530677a742e626b742e636c6f7564646e2e636f6d2f31372d372d31392f32363236363933322e6a7067)
 
 也就是说如果我想用samtools筛选恰好配对的read,就需要用0x10
 
