add shell highlight

--- a/Documentation/转录组入门笔记.md
+++ b/Documentation/转录组入门笔记.md
@@ -1075,7 +1075,6 @@ pip install RSeQC
 
 ```
 bam_stat.py -i SRR3589956_sorted.bam
-
 ```
 
 [![img](https://camo.githubusercontent.com/9486696df5988ab40ff1212bb859c829a771ddb1/687474703a2f2f6f6578373530677a742e626b742e636c6f7564646e2e636f6d2f31372d372d31392f34353935393039302e6a7067)](https://camo.githubusercontent.com/9486696df5988ab40ff1212bb859c829a771ddb1/687474703a2f2f6f6578373530677a742e626b742e636c6f7564646e2e636f6d2f31372d372d31392f34353935393039302e6a7067)
@@ -1141,7 +1140,7 @@ read_distribution.py -i RNA-Seq/aligned/SRR3589956_sorted.bam -r reference/hg19_
 
 基本用法非常的简单：
 
-```
+```shell
 # 安装
 conda install htseq
 # 使用
@@ -1151,7 +1150,7 @@ htseq-count -r pos -f bam RNA-Seq/aligned/SRR3589957_sorted.bam reference/gencod
 
 用一个循环处理多个BAM文件(在/mnt/f/Data目录下)
 
-```
+```shell
 mkdir -p RNA-Seq/matrix/
 for i in `seq 56 58`
 do
